// Team Healthcare Project ERD
// 독거노인 건강관리 시스템 데이터베이스

Project healthcare_project {
  database_type: 'MariaDB'
  Note: '독거노인 건강관리 시스템'
}

// 보호자 기본 정보
Table guardians {
  id int [pk, increment, note: '보호자 고유 ID']
  login_id varchar(50) [unique, not null, note: '로그인 아이디']
  login_pw varchar(255) [not null, note: '암호화된 비밀번호']
  guardian_name varchar(50) [not null, note: '사용자 이름']
  phone varchar(20) [note: '연락처']
  email varchar(100) [note: '이메일']
  is_active tinyint(1) [default: 1, note: '계정 활성화 상태']
  relationship varchar(30) [note: '노인과의 관계']
  created_at datetime [default: `current_timestamp()`, note: '계정 생성일']
  updated_at datetime [default: `current_timestamp()`, note: '계정 수정일']
  role varchar(20) [not null, default: 'GUARDIAN', note: '역할']
  
  Note: '보호자 기본 정보'
}

// 독거노인 기본정보
Table seniors {
  id int [pk, increment, note: '노인 고유 ID']
  guardian_id int [ref: > guardians.id, not null, note: '보호자 ID']
  senior_name varchar(30) [not null, note: '시니어 이름']
  birth_date date [not null, note: '생년월일']
  gender char(1) [note: '성별 (M/F)']
  phone varchar(20) [note: '노인 본인 연락처']
  address varchar(255) [note: '주소']
  emergency_contact varchar(20) [note: '비상연락처']
  chronic_diseases text [note: '주요 지병']
  medications text [note: '복용중인 주요 약물']
  notes text [note: '특이사항']
  is_active tinyint(1) [not null, default: 1, note: '활성 상태']
  created_at datetime [default: `current_timestamp()`, note: '등록일']
  updated_at datetime [default: `current_timestamp()`, note: '수정일']
  
  Note: '독거노인 기본정보'
}

// 생체신호 기록
Table vital_signs {
  id bigint [pk, increment, note: '생체신호 ID']
  senior_id int [ref: > seniors.id, not null, note: '시니어 ID']
  measurement_time datetime [not null, note: '측정 시각']
  blood_pressure_high int [note: '수축기 혈압 (mmHg)']
  blood_pressure_low int [note: '이완기 혈압 (mmHg)']
  heart_rate int [note: '심박수 (bpm)']
  blood_sugar int [note: '혈당 (mg/dL)']
  body_temperature decimal(4,2) [note: '체온 (°C)']
  is_normal tinyint(1) [default: 1, note: '정상 범위 여부']
  notes text [note: '특이사항']
  created_at datetime [default: `current_timestamp()`, note: '기록 시간']
  
  Note: '생체신호 기록'
}

// 알림 관리
Table alerts {
  id int [pk, increment, note: '알림 고유 ID']
  senior_id int [ref: > seniors.id, not null, note: '시니어 ID']
  alert_type varchar(30) [not null, note: 'emergency/warning/info']
  title varchar(200) [not null, note: '알림 제목']
  description text [note: '알림 내용']
  related_vital_id bigint [ref: > vital_signs.id, note: '관련 생체신호 ID']
  is_confirmed tinyint(1) [default: 0, note: '확인 여부']
  confirmed_by int [ref: > guardians.id, note: '확인한 보호자 ID']
  confirmed_at datetime [note: '확인 시간']
  created_at datetime [default: `current_timestamp()`, note: '알림 생성 시각']
  
  Note: '알림 관리'
}

// 일일 활동 기록
Table daily_activities {
  id int [pk, increment, note: '활동 기록 ID']
  senior_id int [ref: > seniors.id, not null, note: '시니어 ID']
  activity_date date [not null, note: '활동 날짜']
  activity_category varchar(50) [note: '활동 카테고리']
  daily_notes text [note: '일일 특이사항']
  created_at datetime [default: `current_timestamp()`, note: '기록 생성일']
  updated_at datetime [default: `current_timestamp()`, note: '수정일']
  
  Note: '일일 활동 기록'
}

// 건강 요약 리포트
Table health_summaries {
  id int [pk, increment, note: '요약 ID']
  senior_id int [ref: > seniors.id, not null, note: '시니어 ID']
  summary_date date [not null, note: '요약 기준일']
  period_type varchar(10) [not null, note: 'weekly/monthly']
  avg_blood_pressure_high decimal(5,2) [note: '평균 수축기 혈압']
  avg_blood_pressure_low decimal(5,2) [note: '평균 이완기 혈압']
  avg_heart_rate decimal(5,2) [note: '평균 심박수']
  total_measurements int [note: '총 측정 횟수']
  abnormal_count int [note: '이상 수치 횟수']
  health_status varchar(20) [note: 'good/normal/concern']
  created_at datetime [default: `current_timestamp()`, note: '생성일']
  
  Note: '건강 요약 리포트'
}

// 복약 일정
Table medication_schedules {
  id int [pk, increment, note: '복약 일정 ID']
  senior_id int [ref: > seniors.id, not null, note: '시니어 ID']
  medication_name varchar(100) [not null, note: '약물명']
  schedule_time time [not null, note: '복용 시간']
  days_of_week varchar(20) [note: '복용 요일']
  is_active tinyint(1) [default: 1, note: '활성 상태']
  created_at datetime [default: `current_timestamp()`, note: '등록일']
  
  Note: '복약 일정'
}

// 알림 수신 설정
Table notification_settings {
  id int [pk, increment, note: '설정 고유 ID']
  guardian_id int [ref: - guardians.id, not null, note: '보호자 ID']
  receive_emergency tinyint(1) [default: 1, note: '응급 알림 수신']
  receive_warning tinyint(1) [default: 1, note: '경고 알림 수신']
  receive_daily_report tinyint(1) [default: 0, note: '일일 리포트 수신']
  quiet_start_time time [note: '방해금지 시작 시간']
  quiet_end_time time [note: '방해금지 종료 시간']
  updated_at datetime [default: `current_timestamp()`, note: '설정 수정일']
  
  Note: '알림 수신 설정'
}

// 사용자 설정
Table user_setting {
  id bigint [pk, increment, note: '설정 ID']
  guardian_id int [ref: > guardians.id, not null, note: '보호자 ID']
  category varchar(255) [not null, note: '카테고리']
  sub_category varchar(255) [note: '서브 카테고리']
  values text [not null, note: '설정값']
  created_at timestamp [default: `current_timestamp()`, note: '생성일']
  updated_at timestamp [default: `current_timestamp()`, note: '수정일']
  
  Note: '사용자 설정'
}

// 노인-보호자 연결 관계 (다대다)
Table senior_guardian_relations {
  id int [pk, increment, note: '관계 고유 ID']
  senior_id int [ref: > seniors.id, not null, note: '시니어 ID']
  guardian_id int [ref: > guardians.id, not null, note: '보호자 ID']
  is_primary tinyint(1) [default: 0, note: '주 보호자 여부']
  created_at datetime [default: `current_timestamp()`, note: '관계 설정일']
  
  Note: '노인-보호자 연결 관계'
}

// JWT 토큰 관리
Table refresh_tokens {
  id bigint [pk, increment, note: '토큰 ID']
  token_id varchar(255) [unique, not null, note: '토큰 고유 식별자 (jti)']
  guardian_id int [ref: > guardians.id, not null, note: '보호자 ID']
  token_value text [not null, note: 'JWT Refresh Token 값']
  device_info varchar(255) [note: '디바이스 정보']
  ip_address varchar(45) [note: 'IP 주소']
  issued_at datetime [not null, default: `current_timestamp()`, note: '발급 시간']
  expires_at datetime [not null, note: '만료 시간']
  last_used_at datetime [default: `current_timestamp()`, note: '마지막 사용 시간']
  is_active tinyint(1) [default: 1, note: '활성 상태']
  revoked_at datetime [note: '폐기 시간']
  revoke_reason varchar(50) [note: '폐기 사유']
  
  Note: 'JWT 토큰 관리'
}